--- a/all.yml
+++ b/all.yml
@@ -1,25 +1,9 @@
 ---
 - hosts: all
+  gather_facts: false
   roles:
 
   # osx config
-  - role: dock
-    apps:
-    - /Applications/Firefox.app
-    - /Applications/Airmail.app
-    - /Applications/Dashlane.app
-    - /Applications/Spotify.app
-    - /Applications/Airmail.app
-    - "/Applications/Adobe Photoshop CC/Adobe Photoshop CC.app"
-    - "/Applications/Adobe Illustrator CC/Adobe Illustrator.app"
-    - /Applications/Atom.app
-    - /Applications/iTerm.app
-    - /Applications/Dash.app
-    folders:
-    - path: ~/
-    - path: ~/Documents
-    - path: ~/Downloads
-      sort: datemodified
   - role: cask_package
     package_name: asepsis
   - role: dashboard
@@ -35,9 +19,6 @@
 
   # cli
   # shell tooling
-  - role: git_config
-    git_user_name: Bob Bob
-    git_user_email: bob.bob@example.com
   - role: legit
   - role: hub
   - role: brew_package
@@ -55,10 +36,12 @@
   - role: brew_package
     package_name: android-sdk
   ## databases
-  - role: brew_package
+  - role: cask_package
     package_name: postgres
   - role: brew_package
-    package_name: mongodb
+    package_name: redis
+  - role: brew_package
+    package_name: elasticsearch
   ## deployment
   - role: brew_package
     package_name: heroku-toolbelt
@@ -68,4 +51,35 @@
   # gui
   ## text editors
   - role: cask_package
-    package_name: atom
+    package_name: textmate
+  - role: cask_package
+    package_name: macvim
+  ## general
+  - role: cask_package
+    package_name: iterm2
+  - role: cask_package
+    package_name: firefox
+  - role: cask_package
+    package_name: chromium
+  - role: cask_package
+    package_name: dropbox
+  - role: cask_package
+    package_name: 1password
+  - role: cask_package
+    package_name: apptrap
+  - role: cask_package
+    package_name: alfred
+  - role: cask_package
+    package_name: skype
+  - role: cask_package
+    package_name: slack
+  - role: brew_package
+    package_name: htop
+  - role: brew_package
+    package_name: ack
+
+ ## entertainment
+  - role: cask_package
+    package_name: spotify
+  - role: cask_package
+    package_name: vlc
