--- a/roles/applications/vars/main.yml
+++ b/roles/applications/vars/main.yml
@@ -1,2 +1,16 @@
 ---
-# vars file for applications
+# vars file for base
+brew_taps:
+  - []
+
+cask_taps:
+  - []
+
+brew_packages_bootstrap:
+  - []
+
+cask_packages_bootstrap:
+  - ['textmate', 'macvim', 'iterm2', 'firefox', 'chromium', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'spotify', 'vlc']
+
+npm_global_packages:
+  - []
