adding user specific tasks

--- a/roles/user/vars/main.yml
+++ b/roles/user/vars/main.yml
@@ -1,2 +1,16 @@
 ---
-# vars file for user
+# vars file for base
+brew_taps:
+  - []
+
+cask_taps:
+  - []
+
+brew_packages_bootstrap:
+  - []
+
+cask_packages_bootstrap:
+  - []
+
+npm_global_packages:
+  - []
