--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -3,6 +3,14 @@
 - name: switch_to_zsh
   shell: curl -L https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh | sh
 
+- name: clone_dotfiles
+  git: repo=git@github.com:sriprasanna/dotfiles.git dest=/Users/snark/src/github.com/sriprasanna/dotfiles
+
+- name: install_dotfiles
+  shell: ruby install.rb
+  args:
+    chdir: /Users/snark/src/github.com/sriprasanna/dotfiles
+
 - name: tap_brew
   homebrew_tap: tap={{ item }} state=present
   with_flattened:
