--- a/roles/applications/vars/main.yml
+++ b/roles/applications/vars/main.yml
@@ -10,7 +10,7 @@ brew_packages_bootstrap:
   - []
 
 cask_packages_bootstrap:
-  - ['textmate', 'macvim', 'iterm2', 'firefox', 'chromium', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'spotify', 'vlc', 'jitsi']
+  - ['textmate', 'macvim', 'iterm2', 'firefox', 'chromium', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'spotify', 'vlc', 'jitsi', 'intellij-idea-ce']
 
 npm_global_packages:
   - []
