--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -24,3 +24,10 @@
   npm: name={{ item }} global=yes state=present
   with_flattened:
     - npm_global_packages
+
+- name: add_fish_to_shells
+  lineinfile: dest=/etc/shells line={{ fish_path }} state=present
+  sudo: yes
+
+- name: switch_to_fish
+  shell: chsh -s {{ fish_path }} {{ default_user }}
