--- a/roles/applications/vars/main.yml
+++ b/roles/applications/vars/main.yml
@@ -7,10 +7,10 @@ cask_taps:
   - []
 
 brew_packages_bootstrap:
-  - ['mutt', 'profanity', 'gpg2', 'tmate']
+  - ['mutt', 'profanity', 'gpg', 'tmate', 'urlview', 'msmtp', 'contacts', 'notmuch']
 
 cask_packages_bootstrap:
-  - ['textmate', 'macvim', 'iterm2', 'firefox', 'chromium', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'spotify', 'vlc', 'jitsi', 'intellij-idea-ce', 'vagrant', 'libreoffice', 'virtualbox', 'limechat', 'deluge']
+  - ['textmate', 'macvim', 'iterm2', 'firefox', 'google-chrome', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'spotify', 'vlc', 'jitsi', 'intellij-idea-ce', 'vagrant', 'libreoffice', 'virtualbox', 'limechat', 'deluge', 'phantomjs']
 
 npm_global_packages:
   - []
