--- a/roles/applications/tasks/main.yml
+++ b/roles/applications/tasks/main.yml
@@ -24,3 +24,6 @@
   npm: name={{ item }} global=yes state=present
   with_flattened:
     - npm_global_packages
+
+- name: autostart_offlineimap
+  copy: src=snark.offlineimap.plist dest=/Users/snark/Library/LaunchAgents/snark.offlineimap.plist
