--- a/roles/applications/files/snark.offlineimap.plist
+++ b/roles/applications/files/snark.offlineimap.plist
@@ -12,5 +12,9 @@
   </array>
   <key>StartInterval</key>
   <integer>120</integer>
+  <key>StandardErrorPath</key>
+  <string>/Users/snark/.log/offlineimaperror.log</string>
+  <key>StandardOutPath</key>
+  <string>/Users/snark/.log/offlineimap.log</string>
 </dict>
 </plist>
