install java before with cask as deps

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -10,15 +10,15 @@
   with_flattened:
     - cask_taps
 
+- name: install_cask_packages
+  homebrew_cask: name={{ item }} state=present
+  with_flattened:
+    - cask_packages_bootstrap
+
 - name: install_brew_packages
   homebrew: name={{ item }} state=installed
   with_flattened:
     - brew_packages_bootstrap
-
-- name: install_brew_packages
-  homebrew_cask: name={{ item }} state=present
-  with_flattened:
-    - cask_packages_bootstrap
 
 - name: install_npm_packages
   npm: name={{ item }} global=yes state=present
