--- a/roles/base/vars/main.yml
+++ b/roles/base/vars/main.yml
@@ -7,7 +7,7 @@ cask_taps:
   - ['caskroom/fonts']
 
 brew_packages_bootstrap:
-  - ['vim', 'node', 'android-sdk', 'redis', 'elasticsearch', 'postgres', 'heroku-toolbelt', 'htop', 'ack', 'tarsnap', 'fish', 'tree', 'peco', 'ag', 'rcm', 'mtr', 'tpp', 'tsung', 'task', 'calcurse', 'tig', 'slurm', 'profanity', 'weechat', 'tmux', 'valgrind']
+  - ['vim', 'node', 'android-sdk', 'redis', 'elasticsearch', 'postgres', 'heroku-toolbelt', 'htop', 'ack', 'tarsnap', 'fish', 'tree', 'peco', 'ag', 'rcm', 'mtr', 'tpp', 'tsung', 'task', 'calcurse', 'tig', 'slurm', 'profanity', 'weechat', 'tmux', 'valgrind', 'boot2docker']
 
 cask_packages_bootstrap:
   - ['asepsis', 'font-source-code-pro', 'font-sauce-code-powerline', 'java']
