--- a/roles/applications/vars/main.yml
+++ b/roles/applications/vars/main.yml
@@ -10,7 +10,7 @@ brew_packages_bootstrap:
   - ['mutt', 'profanity', 'tmate', 'urlview', 'msmtp', 'notmuch', 'offlineimap', 'sshuttle', 'links', 'hub', 'phantomjs']
 
 cask_packages_bootstrap:
-  - ['textmate', 'macvim', 'iterm2', 'firefox', 'google-chrome', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'spotify', 'vlc', 'jitsi', 'intellij-idea-ce', 'vagrant', 'libreoffice', 'virtualbox', 'limechat', 'deluge', 'phantomjs', 'gpgtools', 'kindle', 'genymotion', 'unrarx', 'flash', 'ynab', 'atom']
+  - ['textmate', 'macvim', 'iterm2', 'firefox', 'google-chrome', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'genymotion', 'vlc', 'jitsi', 'intellij-idea-ce', 'vagrant', 'libreoffice', 'virtualbox', 'limechat', 'deluge', 'phantomjs', 'gpgtools', 'kindle', 'genymotion', 'unrarx', 'flash', 'ynab', 'atom']
 
 npm_global_packages:
   - []
