--- a/roles/applications/vars/main.yml
+++ b/roles/applications/vars/main.yml
@@ -13,7 +13,7 @@ brew_link_packages:
   - ['ncurses']
 
 cask_packages_bootstrap:
-  - ['textmate', 'macvim', 'iterm2', 'firefox', 'google-chrome', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'genymotion', 'vlc', 'jitsi', 'intellij-idea-ce', 'vagrant', 'libreoffice', 'virtualbox', 'limechat', 'deluge', 'phantomjs', 'gpgtools', 'kindle', 'genymotion', 'unrarx', 'flash', 'ynab', 'atom', 'adium']
+  - ['textmate', 'macvim', 'iterm2', 'firefox', 'google-chrome', 'dropbox', '1password', 'apptrap', 'skype', 'slack', 'genymotion', 'vlc', 'jitsi', 'intellij-idea-ce', 'vagrant', 'libreoffice', 'virtualbox', 'limechat', 'deluge', 'phantomjs', 'gpgtools', 'kindle', 'genymotion', 'unrarx', 'flash', 'ynab', 'atom', 'adium', 'flux']
 
 npm_global_packages:
   - ['aglio']
